[metadata]
name = dosertools
version = 1.0.2
author = Rob Learsch and Red Lhota
author_email = rlearsch@caltech.edu
description = dosertools is a Python package for analyzing dripping-onto-substrate extensional rheology (DoSER) videos.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rlearsch/dosertools
project_urls =
    Bug Tracker = https://github.com/rlearsch/dosertools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
  pytest
  numpy
  scikit-image
  pandas
  imagecodecs
  sphinx
  holoviews

[options.packages.find]
where = src
